# Radiationsafety

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  architecture.mmd  build_document_sources.py  docker-compose.yml  document_sources.example.yaml  document_sources.yaml  document_updates.py  document_versions.json  ingestion.py  ingestion_fetch.py  main.py  package-lock.json  package.json  pyproject.toml  run-019cdc73-0dc7-7f81-a809-7e47ce6e8893.json
.cursor/rules/: cleanup-routine.mdc  project-structure.mdc
.github/workflows/: ci.yml
api/: __init__.py  main.py  rate_limit.py
docs/: README.md  architecture.md  maintenance.md  production-readiness.md
documents/Bekendtgørelse/: dk-bekendtgørelse-om-ioniserende-stråling-og-stråle_version.txt  dk-bekendtgørelse-om-radioaktive-stoffer_current.xml  dk-bekendtgørelse-om-radioaktive-stoffer_version.txt
documents/IAEA/: .~lock.skabelon-til-instruks-for-brug-af-aabne-radioaktive-kilder-2020.docx#  p15292-P2059_1503.epub  skabelon-til-instruks-for-brug-af-aabne-radioaktive-kilder-2020.docx
documents/backup/Bekendtgørelse/: dk-bekendtgørelse-om-ioniserende-stråling-og-stråle_20260216.xml
eval/: .gitignore  README.md  __init__.py  metrics.py  run_eval.py
eval/data/: golden.json
frontend/: Dockerfile  README.md  eslint.config.js  index.epub  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/e2e/: models.spec.ts  privacy-mode.spec.ts
frontend/src/: App.css  App.jsx  App.tsx  constants.ts  storage.test.ts  storage.ts  types.ts
frontend/src/components/: DocumentListSidebar.tsx  DocumentUpdatesModal.tsx  DocumentsPanel.tsx  ModelSelector.test.tsx  ModelSelector.tsx  QueryForm.jsx  QueryForm.test.tsx  QueryForm.tsx  ResponseDisplay.jsx  ResponseDisplay.test.tsx  ResponseDisplay.tsx  SettingsModal.test.tsx  SettingsModal.tsx
graph/: __init__.py  consts.py  graph.py  i18n.py  llm_factory.py  state.py  utils.py
graph/chains/: __init__.py  answer_grader.py  context_sufficiency_grader.py  generation.py  generation_grader.py  hallucinations_grader.py  missing_query_chain.py  retrieval_grader.py  search_query_chain.py  truncate.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  grade_generation.py  retrieval_common.py  retrieve.py  retrieve_missing.py  verify_trusted.py  web_search.py
graph/services/: __init__.py  retsinformation_eli.py  retsinformation_harvest.py
scripts/: render_architecture.py  setup_second_brain.sh
tests/: __init__.py  conftest.py  test_api.py  test_build_document_sources.py  test_ci_config.py  test_dependency_constraints.py  test_document_updates.py  test_eval_metrics.py  test_grade_generation.py  test_graph.py  test_ingestion.py  test_ingestion_fetch.py  test_llm_factory.py  test_ollama_privacy_mode.py  test_reflection.py  test_retsinformation_services.py
