[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["graph*"]

[tool.setuptools]
py-modules = ["ingestion", "ingestion_fetch", "document_updates"]

[project]
name = "radiationsafety"
version = "0.2.0"
description = "RAG system for IAEA and Danish radiation safety documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.136.0",
    "python-multipart>=0.0.9",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.0",
    "langchain-mistralai>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.0",
    "pypdf>=6.0.0",
    "docling>=2.101.0",
    "langchain-docling>=2.0.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "langdetect>=1.0.9",
    "redis>=8.0.0",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.0",
    "isort>=8.0.1",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
